--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+booktype
 psutil
 sqlalchemy
 Flask==3.1.2
@@ -7,7 +8,7 @@ Flask-CORS==6.0.2
 Flask-JWT-Extended==4.7.1
 Flask-SocketIO==5.6.0
 psycopg2-binary==2.9.11
-redis==7.1.1
+redis==7.2.0
 python-dotenv==1.2.1
 marshmallow==4.2.2
 requests==2.32.5
