--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: postgres:14-alpine
     environment:
-      POSTGRES_DB: mypay
+      POSTGRES_DB: payment_gateway_dev
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
@@ -23,14 +23,12 @@ services:
       - "5000:5000"
     environment:
       FLASK_ENV: development
-      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/mypay
+
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/payment_gateway_dev
       REDIS_URL: redis://redis:6379/0
     depends_on:
       - postgres
       - redis
-    volumes:
-      - .:/app
-    command: flask run --host=0.0.0.0
 
 volumes:
   postgres_data:
