--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Build image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/mypay:latest .
+          docker build -t ghcr.io/devnprogg/mypay/mypay:latest .
 
       - name: Push image
         run: |
-          docker push ghcr.io/${{ github.repository }}/mypay:latest
+          docker push ghcr.io/devnprogg/mypay/mypay:latest
